5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1834_1277.log
== TEST (2019-06-22 12:49:00) 
-- CODE:
from numpy import *
from  numpy, linalg import *
a = int(input("Digite o c贸digo para a cidade A: "))
b = int(input("Digite o c贸digo para a cidade B: "))
matdist = array([[0, 2, 11, 6, 15, 11, 1],
					  [2, 0, 7, 12, 4, 2, 15],
					  [11, 7, 0, 11, 8, 3, 13],
					  [6, 12, 11, 0, 10, 2, 1],
					  [15, 4, 8, 10, 0, 5, 13],
					  [11, 2, 3, 2, 5, 0, 14],
					  [1, 15, 13, 1, 13, 14, 0]])
if(a == 111 and b == 111):
	print(matdist[0,0])
	
-- ERROR:
File "XXXX", line 2
    from  numpy, linalg import *
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 12:49:22) 
-- CODE:
from numpy import *
from  numpy.linalg import *
a = int(input("Digite o c贸digo para a cidade A: "))
b = int(input("Digite o c贸digo para a cidade B: "))
matdist = array([[0, 2, 11, 6, 15, 11, 1],
					  [2, 0, 7, 12, 4, 2, 15],
					  [11, 7, 0, 11, 8, 3, 13],
					  [6, 12, 11, 0, 10, 2, 1],
					  [15, 4, 8, 10, 0, 5, 13],
					  [11, 2, 3, 2, 5, 0, 14],
					  [1, 15, 13, 1, 13, 14, 0]])
if(a == 111 and b == 111):
	print(matdist[0,0])
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 12:49:39) 
-- CODE:
from numpy import *
from  numpy.linalg import *
a = int(input("Digite o codigo para a cidade A: "))
b = int(input("Digite o codigo para a cidade B: "))
matdist = array([[0, 2, 11, 6, 15, 11, 1],
					  [2, 0, 7, 12, 4, 2, 15],
					  [11, 7, 0, 11, 8, 3, 13],
					  [6, 12, 11, 0, 10, 2, 1],
					  [15, 4, 8, 10, 0, 5, 13],
					  [11, 2, 3, 2, 5, 0, 14],
					  [1, 15, 13, 1, 13, 14, 0]])
if(a == 111 and b == 111):
	print(matdist[0,0])
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 19:34:13) 
-- CODE:
from numpy import *
from  numpy.linalg import *
a = int(input("Digite o codigo para a cidade A: "))
b = int(input("Digite o codigo para a cidade B: "))
matdist = array([[0, 2, 11, 6, 15, 11, 1],
					  [2, 0, 7, 12, 4, 2, 15],
					  [11, 7, 0, 11, 8, 3, 13],
					  [6, 12, 11, 0, 10, 2, 1],
					  [15, 4, 8, 10, 0, 5, 13],
					  [11, 2, 3, 2, 5, 0, 14],
					  [1, 15, 13, 1, 13, 14, 0]])

i = (a/111) - 1
j = (b/111) - 1

print(matdist[i,j])
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 19:35:54) 
-- CODE:
from numpy import *
from  numpy.linalg import *
a = int(input("Digite o codigo para a cidade A: "))
b = int(input("Digite o codigo para a cidade B: "))
matdist = array([[0, 2, 11, 6, 15, 11, 1],
					  [2, 0, 7, 12, 4, 2, 15],
					  [11, 7, 0, 11, 8, 3, 13],
					  [6, 12, 11, 0, 10, 2, 1],
					  [15, 4, 8, 10, 0, 5, 13],
					  [11, 2, 3, 2, 5, 0, 14],
					  [1, 15, 13, 1, 13, 14, 0]])

i = (a/111) - 1
j = (b/111) - 1

print(i)
print(j)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 19:37:46) 
-- CODE:
from numpy import *
from  numpy.linalg import *
a = int(input("Digite o codigo para a cidade A: "))
b = int(input("Digite o codigo para a cidade B: "))
matdist = array([[0, 2, 11, 6, 15, 11, 1],
					  [2, 0, 7, 12, 4, 2, 15],
					  [11, 7, 0, 11, 8, 3, 13],
					  [6, 12, 11, 0, 10, 2, 1],
					  [15, 4, 8, 10, 0, 5, 13],
					  [11, 2, 3, 2, 5, 0, 14],
					  [1, 15, 13, 1, 13, 14, 0]])

i = (a//111) - 1
j = (b//111) - 1

print(i)
print(j)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 19:38:20) 
-- CODE:
from numpy import *
from  numpy.linalg import *
a = int(input("Digite o codigo para a cidade A: "))
b = int(input("Digite o codigo para a cidade B: "))
matdist = array([[0, 2, 11, 6, 15, 11, 1],
					  [2, 0, 7, 12, 4, 2, 15],
					  [11, 7, 0, 11, 8, 3, 13],
					  [6, 12, 11, 0, 10, 2, 1],
					  [15, 4, 8, 10, 0, 5, 13],
					  [11, 2, 3, 2, 5, 0, 14],
					  [1, 15, 13, 1, 13, 14, 0]])

i = (a//111) - 1
j = (b//111) - 1
print(matdist[i, j])

print(i)
print(j)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 19:38:53) 
-- CODE:
from numpy import *
from  numpy.linalg import *
a = int(input("Digite o codigo para a cidade A: "))
b = int(input("Digite o codigo para a cidade B: "))
matdist = array([[0, 2, 11, 6, 15, 11, 1],
					  [2, 0, 7, 12, 4, 2, 15],
					  [11, 7, 0, 11, 8, 3, 13],
					  [6, 12, 11, 0, 10, 2, 1],
					  [15, 4, 8, 10, 0, 5, 13],
					  [11, 2, 3, 2, 5, 0, 14],
					  [1, 15, 13, 1, 13, 14, 0]])

i = (a//111) - 1
j = (b//111) - 1
print(matdist[i, j])

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 19:39:06) 
-- CODE:
from numpy import *
from  numpy.linalg import *
a = int(input("Digite o codigo para a cidade A: "))
b = int(input("Digite o codigo para a cidade B: "))
matdist = array([[0, 2, 11, 6, 15, 11, 1],
					  [2, 0, 7, 12, 4, 2, 15],
					  [11, 7, 0, 11, 8, 3, 13],
					  [6, 12, 11, 0, 10, 2, 1],
					  [15, 4, 8, 10, 0, 5, 13],
					  [11, 2, 3, 2, 5, 0, 14],
					  [1, 15, 13, 1, 13, 14, 0]])

i = (a//111) - 1
j = (b//111) - 1
print(matdist[i, j])

	
-- EXECUTION TIME:
1.19822
-- TEST CASE 1:
---- input:
777
666
---- correct output:
14
---- user output:
14
-- TEST CASE 2:
---- input:
555
111
---- correct output:
15
---- user output:
15
-- TEST CASE 3:
---- input:
333
777
---- correct output:
13
---- user output:
13
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:16:36) 
-- CODE:
from numpy import *
from numpy.linalg import * 
a = int(input("Digite o codigo da cidade A: ))
b = int(input("Digite o codigo da cidade B: ))
a = a/111
b = b/111				  
dist = array([[0, 2, 11, 6, 15, 11, 1],
				  [2, 0, 7, 12, 4, 2, 15],
				  [11, 7, 0, 11, 8, 3, 13],
				  [6, 12, 11, 0, 10, 2, 1],
				  [15, 4, 8, 10, 0, 5, 13],
				  [11, 2, 3, 2, 5, 0, 14],
				  [1, 15, 13, 1, 13, 14, 0]])
for i in range(7):
	for j in range(7)
		print(dist[a-1,b-1])
				  
-- ERROR:
File "XXXX", line 3
    a = int(input("Digite o codigo da cidade A: ))
                                                 ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:17:16) 
-- CODE:
from numpy import *
from numpy.linalg import * 
a = int(input("Digite o codigo da cidade A: "))
b = int(input("Digite o codigo da cidade B: "))
a = a/111
b = b/111				  
dist = array([[0, 2, 11, 6, 15, 11, 1],
				  [2, 0, 7, 12, 4, 2, 15],
				  [11, 7, 0, 11, 8, 3, 13],
				  [6, 12, 11, 0, 10, 2, 1],
				  [15, 4, 8, 10, 0, 5, 13],
				  [11, 2, 3, 2, 5, 0, 14],
				  [1, 15, 13, 1, 13, 14, 0]])
for i in range(7):
	for j in range(7)
		print(dist[a-1,b-1])
				  
-- ERROR:
File "XXXX", line 15
    for j in range(7)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:17:35) 
-- CODE:
from numpy import *
from numpy.linalg import * 
a = int(input("Digite o codigo da cidade A: "))
b = int(input("Digite o codigo da cidade B: "))
a = a/111
b = b/111				  
dist = array([[0, 2, 11, 6, 15, 11, 1],
				  [2, 0, 7, 12, 4, 2, 15],
				  [11, 7, 0, 11, 8, 3, 13],
				  [6, 12, 11, 0, 10, 2, 1],
				  [15, 4, 8, 10, 0, 5, 13],
				  [11, 2, 3, 2, 5, 0, 14],
				  [1, 15, 13, 1, 13, 14, 0]])
for i in range(7):
	for j in range(7):
		print(dist[a-1,b-1])
				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:19:00) 
-- CODE:
from numpy import *
from numpy.linalg import * 
a = int(input("Digite o codigo da cidade A: "))
b = int(input("Digite o codigo da cidade B: "))
a = a/111
b = b/111				  
dist = array([[0, 2, 11, 6, 15, 11, 1],
				  [2, 0, 7, 12, 4, 2, 15],
				  [11, 7, 0, 11, 8, 3, 13],
				  [6, 12, 11, 0, 10, 2, 1],
				  [15, 4, 8, 10, 0, 5, 13],
				  [11, 2, 3, 2, 5, 0, 14],
				  [1, 15, 13, 1, 13, 14, 0]])
for i in range(7):
	for j in range(7):
		print(dist[0,0])
				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:20:37) 
-- CODE:
from numpy import *
from numpy.linalg import * 
a = int(input("Digite o codigo da cidade A: "))
b = int(input("Digite o codigo da cidade B: "))
dist = array([[0, 2, 11, 6, 15, 11, 1],
				  [2, 0, 7, 12, 4, 2, 15],
				  [11, 7, 0, 11, 8, 3, 13],
				  [6, 12, 11, 0, 10, 2, 1],
				  [15, 4, 8, 10, 0, 5, 13],
				  [11, 2, 3, 2, 5, 0, 14],
				  [1, 15, 13, 1, 13, 14, 0]])
i = (a/111)-1
j = (b/111)-1
print(dist[i,j])				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:22:38) 
-- CODE:
from numpy import *
from numpy.linalg import * 
a = int(input("Digite o codigo da cidade A: "))
b = int(input("Digite o codigo da cidade B: "))
dist = array([[0, 2, 11, 6, 15, 11, 1],
				  [2, 0, 7, 12, 4, 2, 15],
				  [11, 7, 0, 11, 8, 3, 13],
				  [6, 12, 11, 0, 10, 2, 1],
				  [15, 4, 8, 10, 0, 5, 13],
				  [11, 2, 3, 2, 5, 0, 14],
				  [1, 15, 13, 1, 13, 14, 0]])
i = (a//111)-1
j = (b//111)-1
print(dist[i,j])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
